--- a/jetsurvey/src/main/res/values/themes.xml
+++ b/jetsurvey/src/main/res/values/themes.xml
@@ -2,4 +2,5 @@
 <resources>
 
     <style name="Theme.ComposeUI" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.AppCompatUI" parent="Theme.Material3.DayNight.NoActionBar" />
 </resources>
